Fixing scroll to top button in dark mode

--- a/University/Admin assets/CSS/build-uhi-main-2.css
+++ b/University/Admin assets/CSS/build-uhi-main-2.css
@@ -510,6 +510,7 @@ form .search-input .tt-menu .tt-cursor,
     transform: translateY(100px);
     transition: all 0.5s ease;
     border-bottom: 5px solid var(--uhi-blue);
+    color-scheme: only light;
   }
 
   #content-core a.showScroll,
